[package]
name = "oma-refresh"
version = "0.55.0"
edition = "2024"
description = "APT repository refresh handler library"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oma-fetch = { workspace = true, default-features = false }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "fs",
    "process",
    "macros",
    "rt",
    "rt-multi-thread",
] }
futures = { workspace = true }
oma-apt-sources-lists = { workspace = true }
chrono = { workspace = true, features = ["unstable-locales"] }
oma-topics = { workspace = true, optional = true, default-features = false }
spdlog-rs = { workspace = true }
oma-repo-verify = { workspace = true, default-features = false }
ahash = { workspace = true }
oma-apt = { workspace = true, optional = true }
aho-corasick = { workspace = true }
bon = { workspace = true }
once_cell = { workspace = true }
apt-auth-config = { workspace = true }
deb822-fast = { workspace = true }
sys-locale = { workspace = true }
fancy-regex = { workspace = true }
oma-utils = { workspace = true, default-features = false }
reqwest-middleware = { workspace = true }
flume = { workspace = true }

[features]
aosc = ["dep:oma-topics"]
sequoia-openssl-backend = ["oma-repo-verify/sequoia-openssl-backend"]
sequoia-nettle-backend = ["oma-repo-verify/sequoia-nettle-backend"]
rustls = ["oma-fetch/rustls", "oma-topics/rustls"]
native-tls = ["oma-fetch/native-tls", "oma-topics/native-tls"]
apt = ["dep:oma-apt"]
default = ["aosc", "sequoia-nettle-backend", "rustls", "apt"]

[dev-dependencies]
flume = { workspace = true }
oma-utils = { workspace = true, features = ["dpkg"] }
rustls = { workspace = true }

[[example]]
name = "update"
required-features = ["apt"]
