[package]
name = "oma-repo-verify"
version = "0.9.0"
edition = "2024"
description = "Handle APT repository verify library"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "2"
sequoia-openpgp = { version = "2", default-features = false }
spdlog-rs = { git = 'https://github.com/SpriteOvO/spdlog-rs.git', branch = "sink-decouple", optional = true }
tracing = { version = "0.1", optional = true }
oma-apt-sources-lists = "0.9"
sequoia-policy-config = "0.8"

[features]
spdlog-rs = ["dep:spdlog-rs"]
tracing = ["dep:tracing"]
sequoia-openssl-backend = ["sequoia-openpgp/crypto-openssl"]
sequoia-nettle-backend = ["sequoia-openpgp/crypto-nettle"]
default = ["sequoia-nettle-backend"]
