[package]
name = "oma-repo-verify"
version = "0.10.0"
edition = "2024"
description = "Handle APT repository verify library"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sequoia-openpgp = { workspace = true }
spdlog-rs = { workspace = true }
oma-apt-sources-lists = { workspace = true }
sequoia-policy-config = { workspace = true }
chrono = { workspace = true }

[features]
sequoia-openssl-backend = ["sequoia-openpgp/crypto-openssl"]
sequoia-nettle-backend = ["sequoia-openpgp/crypto-nettle"]
default = ["sequoia-nettle-backend"]
