[package]
name = "oma-topics"
version = "0.25.2"
edition = "2024"
description = "AOSC OS topic (testing) repository manager used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json", "http2"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", default-features = false, features = ["fs", "rt", "rt-multi-thread"] }
thiserror = "2.0"
futures = "0.3"
spdlog-rs = "0.5"
url = "2.5"
oma-mirror = { version = "0.7.0", path = "../oma-mirror" }
ahash = "0.8.11"

[dev-dependencies]
oma-inquire = "0.3"
oma-console = { path = "../oma-console" }
tokio = { version = "1.28", default-features = false, features = ["macros", "rt-multi-thread"] }

[features]
rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]
