[package]
name = "oma-topics"
version = "0.27.0"
edition = "2024"
description = "AOSC OS topic (testing) repository manager used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = [
    "json",
    "http2",
], default-features = false }
rustls = { workspace = true, default-features = false, features = [
    "ring",
    "tls12",
], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "fs",
    "rt",
    "rt-multi-thread",
] }
thiserror = { workspace = true }
futures = { workspace = true }
spdlog-rs = { workspace = true }
url = { workspace = true }
oma-mirror = { workspace = true }
ahash = { workspace = true }
reqwest-middleware = { workspace = true }

[dev-dependencies]
oma-inquire = { workspace = true }
oma-console = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[features]
rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]
