[package]
name = "oma-tum"
version = "0.5.2"
edition = "2024"
license = "MIT"
description = "AOSC OS Topic Update Manifest library"

[dependencies]
oma-pm-operation-type = { version = "0.10", path = "../oma-pm-operation-type" }
snafu = "0.8.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8.12"
tracing = "0.1"
logos = "0.15"
debversion = "0.5"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
