[package]
name = "oma-tum"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "AOSC OS Topic Update Manifest library"

[dependencies]
oma-pm-operation-type = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ahash = { workspace = true }
spdlog-rs = { workspace = true }
logos = { workspace = true }
debversion = { workspace = true }
