[package]
name = "oma-utils"
version = "0.12.2"
edition = "2024"
description = "General system API and utilities used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
number_prefix = { version = "0.4", optional = true }
os-release = "0.1"
zbus = { version = "5.1", optional = true }
url-escape = { version = "0.1", optional = true }
tracing = "0.1"
logind-zbus = "5.1"

[features]
dpkg = []
human-bytes = ["number_prefix"]
dbus = ["zbus"]
url-no-escape = ["url-escape"]
