[package]
name = "oma-utils"
version = "0.12.3"
edition = "2024"
description = "General system API and utilities used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
number_prefix = { version = "0.4", optional = true }
os-release = "0.1"
zbus = { version = "5.1", optional = true, default-features = false, features = ["tokio"] }
url-escape = { version = "0.1", optional = true }
spdlog-rs = "0.5"
logind-zbus = { version = "5.1", optional = true, default-features = false, features = ["tokio"], package = "logind-zbus-tokio" }

[features]
dpkg = []
human-bytes = ["dep:number_prefix"]
dbus = ["dep:zbus", "dep:logind-zbus"]
url-no-escape = ["dep:url-escape"]
