[package]
name = "oma-utils"
version = "0.13.1"
edition = "2024"
description = "General system API and utilities used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
number_prefix = { workspace = true, optional = true }
os-release = { workspace = true }
zbus = { workspace = true, optional = true }
url-escape = { workspace = true, optional = true }
spdlog-rs =  { workspace = true }
logind-zbus = { workspace = true, optional = true }
nix = { workspace = true, features = ["fs"] }
sysinfo = { workspace = true }

[features]
dpkg = []
human-bytes = ["dep:number_prefix"]
dbus = ["dep:zbus", "dep:logind-zbus"]
url-no-escape = ["dep:url-escape"]
